# watchdog_pi

./: .gitignore  CMakeLists.txt  Frontend2.md  bld.bat  bldwin-rdeb.sh
.circleci/: config.yml
ci/: circleci-build-macos.sh
cmake/: PluginNMEA.cmake
data/: watchdog_pi.svg.bak
include/: Alarm.h  NewAlarmDialog.h  watchdog_pi.h
libs/nmea0183/: CMakeLists.txt
po/: ar_SA.po  bg_BG.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_GB.po  es_ES.po  et_EE.po  fi_FI.po  fil_PH.po  fr_FR.po  gl_ES.po  he_IL.po  hi_IN.po  hu_HU.po  id_ID.po  is_IS.po  it_IT.po  ja_JP.po  ko_KR.po  mr_IN.po  nb_NO.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sv_SE.po  th_TH.po  tr_TR.po  vi_VN.po  watchdog_pi.pot  zh_CN.po  zh_TW.po
src/: Alarm.cpp  NewAlarmDialog.cpp  WatchdogDialog.cpp  WatchdogUI.cpp  WatchdogUI.h  icons.cpp  icons.h  watchdog_pi.cpp  watchdog_pi.h  wddc.cpp
